[package]
name = "db-export"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
near = { path = "../../../near" }
near-store = { path = "../../../core/store" }
near-chain = { path = "../../../chain/chain" }
near-primitives = { path = "../../../core/primitives" }
